<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoGeo</string>
    <string name="hello_world">Registro</string>
    <string name="action_settings">Settings</string>
    <string name="nombreLbL">Nombre: </string>
    <string name="mailLbL">e-M@il: </string>
    <string name="passLbL">Contraseña: </string>
    <string name="registrar">Registrar</string>
    <string name="ir_a">Ir a Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="mailLaBeL">e-M@il: </string>
    <string name="passLaBeL">Contraseña: </string>
    <string name="ok">OK</string>
    <string name="title_activity_text">Text</string>
	<string name="Hola">¡HOLA!</string>
    
</resources>