<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.logeo.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <ListView
        android:id="@+id/ListaUsuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/Registro"
    />
    
    <TableLayout 
        android:id="@+id/Registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="1"
        android:shrinkColumns="1"        
    >
    
    <TableRow>
        <TextView android:text="@string/nombreLbL" />
        <EditText android:id="@+id/nombreTxT"/>        
    </TableRow>
     
    <TableRow>
        <TextView android:text="@string/mailLbL" />
        <EditText android:id="@+id/mailTxT"/>            
    </TableRow>
    
    <TableRow>
        <TextView android:text="@string/passLbL" />
        <EditText android:id="@+id/passTxT"/>            
    </TableRow>
   
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:onClick="guardarOnClick"
    />
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ir_a"
        android:onClick="Login"
    />
    
    </TableLayout>
    
</RelativeLayout>