<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.logeo.Login" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
     <ListView
        android:id="@+id/ListaDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/Reg"
    />
    
    <TableLayout 
        android:id="@+id/Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="1"
        android:shrinkColumns="1"        
    >
     
    <TableRow>
        <TextView android:text="@string/mailLaBeL" />
        <EditText android:id="@+id/mailTexT"/>            
    </TableRow>
    
    <TableRow>
        <TextView android:text="@string/passLaBeL" />
        <EditText android:id="@+id/passTexT"/>            
    </TableRow>
   
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:onClick="okOnClick"
    />
    
    </TableLayout>
    
</RelativeLayout>